Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -6580,7 +6580,7 @@
 }
 
 @inproceedings{Regehr2012a,
-    title = {{Test-case reduction for C compiler bugs}},
+    title = {{Test-Case Reduction for C Compiler Bugs}},
     year = {2012},
     booktitle = {PLDI},
     author = {Regehr, J. and Chen, Y. and Cuoq, P. and Eide, E. and Ellison, C. and Yang, X.},
@@ -9765,7 +9765,7 @@
 }
 
 @inproceedings{Le2013a,
-    title = {{Compiler validation via equivalence modulo inputs}},
+    title = {{Compiler Validation via Equivalence Modulo Inputs}},
     year = {2014},
     booktitle = {PLDI},
     author = {Le, V. and Afshari, M. and Su, Z.},
@@ -11358,7 +11358,7 @@
 }
 
 @inproceedings{Lam2016,
-    title = {{Combining deep learning with information retrieval to localize buggy files for bug reports}},
+    title = {{Combining Deep Learning with Information Retrieval to Localize Buggy Files for Bug Reports}},
     year = {2015},
     booktitle = {ASE},
     author = {Lam, A. N. and Nguyen, A. T. and Nguyen, H. A. and Nguyen, T. N.},
@@ -11615,7 +11615,7 @@
 }
 
 @inproceedings{Sun2016,
-    title = {{Toward understanding compiler bugs in GCC and LLVM}},
+    title = {{Toward Understanding Compiler Bugs in GCC and LLVM}},
     year = {2016},
     booktitle = {ISSTA},
     author = {Sun, C. and Le, V. and Zhang, Q. and Su, Z.},
@@ -11911,4 +11911,27 @@
     number = {1},
     volume = {45},
     keywords = {Fault-based testing, Metamorphic testing, Oracle problem, Symbolic execution}
+}
+
+@article{Spieker2017,
+    title = {{Reinforcement Learning for Automatic Test Case Prioritization and Selection in Continuous Integration}},
+    year = {2017},
+    journal = {Proceedings of 26th International Symposium on Software Testing and Analysis (ISSTA’17)},
+    author = {Spieker, Helge and Gotlieb, Arnaud and Marijan, Dusica and Mossige, Morten},
+    isbn = {9781450350761},
+    doi = {10.1145/3092703.3092709},
+    keywords = {by the research council, continuous integration, inforcement learning, machine learning, of norway, rcn, re-, regression testing, test case prioritization, test case selection, this work is supported, through the research-}
+}
+
+@article{Yaneva2017,
+    title = {{Compiler-Assisted Test Acceleration on GPUs for Embedded Software}},
+    year = {2017},
+    author = {Yaneva, Vanya and Rajan, Ajitha and Dubach, Christophe},
+    number = {17},
+    pages = {35--45},
+    volume = {11},
+    url = {https://doi.org/10.1145/3092703.3092720},
+    isbn = {9781450350761},
+    doi = {10.1145/3092703.3092720},
+    keywords = {Auto-mated testing, Compilers, Embedded software, GPUs, KEYWORDS Functional testing, Source code generation}
 }
