--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -1,6 +1,6 @@
 \section{DeepSmith}
 
-DeepSmith~\footnote{DeepSmith available at: \emph{[URL redacted for double-blind review]}} is our open source framework for compiler fuzzing. Figure~\ref{fig:deeptune} provides a high-level overview. In this work we target OpenCL, though the approach is language agnostic. This section describes the three key components: a generative model for random programs, a test harness, and voting heuristics for differential testing.
+DeepSmith\footnote{DeepSmith available at: \emph{[URL redacted for double-blind review]}} is our open source framework for compiler fuzzing. Figure~\ref{fig:deeptune} provides a high-level overview. In this work we target OpenCL, though the approach is language agnostic. This section describes the three key components: a generative model for random programs, a test harness, and voting heuristics for differential testing.
 
 \begin{figure}
   \centering
@@ -14,17 +14,13 @@ DeepSmith~\footnote{DeepSmith available at: \emph{[URL redacted for double-blind
 
 \subsection{Generative Model}
 
-Generating test cases for compilers is hard because their inputs are highly structured. We pose the problem as an unsupervised machine learning task, employing state-of-the-art deep learning techniques to builds models for how humans write programs, extending prior work on synthetic benchmark generation~\cite{Cummins2017a} and lifting it to the compiler testing domain.
+Generating test cases for compilers is hard because their inputs are highly structured. Producing text with the right structure requires expert knowledge and a significant engineering effort, which has to be repeated from scratch for each new language. Instead, we treat the problem as an unsupervised machine learning task, employing state-of-the-art deep learning techniques to build models for how humans write programs, extending prior work on synthetic benchmark generation~\cite{Cummins2017a} and lifting it to the compiler testing domain. Contrary to existing tools, this approach is language agnostic, is only a few hundred lines of Python, and requires little effort to design.
 
-\cc{This renders the generation of programs language agnostic. The entire generative model is a few hundred lines of Python}
+%Rather than building a custom program generation tool for a particular programming language, we use an artificial neural network to generate streams of tokens. We train the network on a corpus of example programs in the desired programming language, such that the stream of generated tokens closely resembles the probability distribution of tokens within the corpus. Sampling from the stream of generated tokens provides a means to generate new compiler test cases. Contrary to existing tools, this approach is language agnostic, is only a few hundred lines of Python, and requires little effort to design. 
 
-Rather than building a custom program generation tool for a particular programming language, the idea is to a use an artificial neural network to a generate streams of tokens. The network is trained on a corpus of example programs in the desired programming language, such that the stream of generated tokens closely resembles the probability distribution of tokens within the corpus. Sampling from the stream of generated tokens provides a means to generate new compiler test cases.
+\paragraph{Handwritten Programs} The generative model is trained on an initial seed corpus of 10k OpenCL kernels, mined from GitHub. We reason that these millions of lines of code are a representative sample of all OpenCL code. An \emph{oracle compiler} (LLVM 3.9) is used to statically check the source files, discarding files that are not well-formed. This is a necessary precaution when handling a noisy dataset such as GitHub.
 
-\paragraph{Handwritten Programs} The generative model is trained using an initial seed corpus of 10k OpenCL kernels, mined from GitHub. We reason that of millions of lines of code available on GitHub are a representative. These handwritten programs are used to . An \emph{oracle compiler} (LLVM 3.9) is used to statically check the source files, discarding any files that are not well-formed. This is a necessary precaution in presence of a noisy dataset such as GitHub.
-
-\paragraph{Rewriter} Before training on the handwritten source codes, they are rewritten. Rewriting is used to normalize trivial syntactic differences between codes in order to make the code more amenable to machine learning. For example, the choice of identifier names, and the presence of comments.
-
-Each source file is pre-processed to inline macros and remove conditional compilation and comments. Then, all user-declared identifiers and renamed using an arbitrary, but consistent pattern based on their order of declaration: $\{a,\allowbreak b,\allowbreak c,\allowbreak \ldots,\allowbreak aa,\allowbreak ab,\allowbreak ac,\allowbreak \ldots\}$ for variables and $\{A,\allowbreak B,\allowbreak C,\allowbreak \ldots,\allowbreak AA,\allowbreak AB,\allowbreak AC,\allowbreak \ldots\}$ for functions. This ensures a consistent naming convention, without modifying program behavior. Finally, a uniform code style is enforced to ensure consistent use of braces, parentheses, and white space.
+\paragraph{Rewriter} The source code is then rewritten to remove trivial syntactic differences which have little to no effect on the implemented algorithm but make modeling harder. First, each source file is pre-processed to inline macros and remove conditional compilation and comments. Then, all user-declared identifiers and renamed using an arbitrary, but consistent pattern based on their order of declaration: $\{a,\allowbreak b,\allowbreak c,\allowbreak \ldots,\allowbreak aa,\allowbreak ab,\allowbreak ac,\allowbreak \ldots\}$ for variables and $\{A,\allowbreak B,\allowbreak C,\allowbreak \ldots,\allowbreak AA,\allowbreak AB,\allowbreak AC,\allowbreak \ldots\}$ for functions. This ensures a consistent naming convention, without modifying program behavior. Finally, a uniform code style is enforced to ensure consistent use of braces, parentheses, and white space.
 
 \paragraph{Encoder} The textual representation of program codes must be encoded as numeric sequences for feeding as input to the machine learning model. Prior works in have used character-level encodings~\cite{Cummins2017a}, token-level encodings~\cite{TODO}, or fixed length feature vectors~\cite{TODO}. We extend the hybrid character/token-level encoding of~\cite{Cummins2017b}, in which a vocabulary.
 \cc{More detail\ldots}
