--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -83,6 +83,6 @@ We make the following contributions:
 \item a novel, automatic, and fast approach for the generation of expressive random programs for compiler fuzzing. We \emph{infer} programming language syntax, structure, and use from real-world examples, not through an expert-defined grammar; % CLSmith requires expert-driven development for every language feature supported. 40+k lines of C++ vs a few hundred lines of Python.
 \item through syntactic modeling of handwritten programs, we discover bugs in compilers which prior works are unable to, covering more components of the compiler;
 % e.g. ill-formed
-\item we find bugs faster than the state-of-the-art. \cc{I'm not sure that we can back this up. CLSmith provides a larger number of ``interesting'' test cases, but there are dupes \& false positives} In 48 hours we discovered and reported XX bugs in compiler and open source OpenCL implementations, XX\% more than CLSmith over the same time period;
+\item we find bugs faster than the state-of-the-art. \cc{I'm not sure that we can back this up. I'm not going to report any CLSmith bugs, so we'll need to find some other metric to make this comparison} In 48 hours we discovered and reported XX bugs in compiler and open source OpenCL implementations, XX\% more than CLSmith over the same time period;
 \item in modeling real handwritten code, our test cases are more interpretable than other approaches. Average test case size is two orders of magnitude smaller than state-of-the-art;
 \end{itemize}
