--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -548,10 +548,6 @@ Many prior works on compiler validation have focused solely on testing under \em
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\OclgrindUncorrectedTypos}}}%
     \label{lst:oclgrind-uncorrected-typos}
   }\\%
-  \subfloat[Of the 10 compilers we tested, 6 crash with segfault when compiling this kernel.]{%
-    \noindent\mbox{\parbox{\columnwidth}{\usebox{\AlmostEverythingCrash}}}%
-    \label{lst:almost-everything-crash}
-  }\\%
   \subfloat[Testbeds $3\pm$ assertion \emph{sel.hasDoubleType()} during code generation.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelGtDoubleAssertion}}}%
     \label{lst:intel-gt2-double-assertion}
@@ -559,6 +555,18 @@ Many prior works on compiler validation have focused solely on testing under \em
   \subfloat[Testbeds $3\pm$ assertion \emph{scalarizeInsert} during code generation.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\BeignetScalarizeInsert}}}%
     \label{lst:beignet-scalarize-insert}
+  }\\%
+  \subfloat[Of the 10 compilers we tested, 6 crash with segfault when compiling this kernel.]{%
+    \noindent\mbox{\parbox{\columnwidth}{\usebox{\AlmostEverythingCrash}}}%
+    \label{lst:almost-everything-crash}
+  }\\%
+  \subfloat[Testbeds $7\pm$ loops indefinitely, consuming 100\% CPU usage.]{%
+    \noindent\mbox{\parbox{\columnwidth}{\usebox{\XeonPhiSpin}}}%
+    \label{lst:xeon-phi-spin}
+  }\\%
+  \subfloat[Testbed $3\pm$ loop indefinitely, leaking memory until the entire system memory is depleted and the process crashes.]{%
+    \noindent\mbox{\parbox{\columnwidth}{\usebox{\BeignetPtrIntSpin}}}%
+    \label{lst:beignet-ptr-int-spin}
   }\\%
 %  \subfloat[Testbeds $7\pm$ segmentation fault.]{%
 %    \noindent\mbox{\parbox{\columnwidth}{\usebox{\XeonPhiSegfault}}}%
@@ -570,11 +578,11 @@ Many prior works on compiler validation have focused solely on testing under \em
 \paragraph{Semantic Analysis Failures} %
 Compilers are expected to produce informative diagnostics when processing semantically invalid input. Despite that we encountered many compiler crashes attributable to improper or missing error handling. For example, Figure~\ref{lst:nvidia-recursion-segfault} induces an error in NVIDIA compilers due to an implicit global to constant address qualifiers. Similarly, undeclared identifiers should be an easy error to catch and handle; yet, the undeclared identifier \texttt{c} in Figure~\ref{lst:oclgrind-uncorrected-typos} raises an assertion in the compiler front-end during semantic analysis of the AST of testbed $10\pm$.
 
-% \paragraph{Compiler-specific Code} %
-Since the expressiveness of our approach is bounded only by the handwritten programs we train on, DeepSmith will occasionally emit compiler-specific code, such as invoking compiler builtins. We found the quality of error handling on these builtins to vary wildly. For example, Figure~\ref{lst:almost-everything-crash} silently crashes 6 of the 10 compilers.
-
 % \paragraph{Code Generation} %
 Occasionally incorrect program semantics will go undetected until late in the compilation process. Both Figures~\ref{lst:intel-gt2-double-assertion} and~\ref{lst:beignet-scalarize-insert} cause failures during code generation.
+
+% \paragraph{Compiler-specific Code} %
+Since the expressiveness of our approach is bounded only by the handwritten programs we train on, DeepSmith will occasionally emit compiler-specific code, such as invoking compiler builtins. We found the quality of error handling on these builtins to vary wildly. For example, Figure~\ref{lst:almost-everything-crash} silently crashes 6 of the 10 compilers.
 
 % CLgen result ID 994
 % TODO: Testbed $3\pm$ assertion in \emph{gbe::GenEncoder::handleDouble}
@@ -602,21 +610,13 @@ On Testbed~$3\pm$, the statement \texttt{int n = mad24(a, (32), get\_global\_siz
 
 \begin{figure}
   \centering %
-  \subfloat[Testbed $1+$ hangs during optimization of kernels with large loop bounds. Testbeds $1-$ and $2\pm$ compile in under 1 second.]{%
+  \subfloat[Testbed $1+$ hangs during optimization of kernels with large loop bounds. Testbeds $1-$ and $2\pm$ compile in under 1 second. \cc{Remove, unless CLSmith doesn't trigger it}]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\NvidiaOptLoopHang}}}%
     \label{lst:nvidia-opt-loop-hang}
   }\\%
-  \subfloat[Testbeds $4+$, $5+$, $6+$, $7+$ hang during optimization of kernels with non-terminating loops.]{%
+  \subfloat[Testbeds $4+$, $5+$, $6+$, $7+$ hang during optimization of kernels with non-terminating loops. \cc{Remove, unless CLSmith doesn't trigger it}]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelOptLoopHang}}}%
     \label{lst:intel-inf-loop}
-  }\\%
-  \subfloat[Testbeds $7\pm$ loops indefinitely, consuming 100\% CPU usage.]{%
-    \noindent\mbox{\parbox{\columnwidth}{\usebox{\XeonPhiSpin}}}%
-    \label{lst:xeon-phi-spin}
-  }\\%
-  \subfloat[Testbed $3\pm$ loop indefinitely, leaking memory until the entire system memory is depleted and the process crashes.]{%
-    \noindent\mbox{\parbox{\columnwidth}{\usebox{\BeignetPtrIntSpin}}}%
-    \label{lst:beignet-ptr-int-spin}
   }\\%
 % Testbed 3± ptr-int spin:
 %  \subfloat[]{%
@@ -714,7 +714,7 @@ A common pattern in OpenCL is to obtain the thread identity, often as an \texttt
 
 Figure~\ref{lst:oclgrind-race-switch} shows a simple program in which thread identity determines the program output. We found that this test case would sporadically crash Testbeds~$10\pm$, an OpenCL device simulator and debugger. Upon reporting to the developers, the underlying cause was quickly diagnosed as a race condition in \texttt{switch} statement evaluation, and fixed within a week.
 
-\paragraph{Device Memory} CLSmith kernels do not accept inputs. All data is allocated statically in global structs.
+ \paragraph{Device Memory} CLSmith kernels do not accept inputs. All data is allocated statically in global structs.
 
 Figure~\ref{lst:pocl-undefined-symbols} exposed a bug in Testbed $3\pm$ in which ternary operations do not execute if their operands are global buffers (i.e. device allocated memory).
 
