--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -96,7 +96,6 @@ A majority outcome exists if, for a particular test case ran on $n$ testbeds, at
 
 A \emph{wrong-output} (\textbf{w}) occurs if, for a given test case, the majority of testbeds produce an output, at least $\ceil{\frac{2}{3}n}$ testbeds compute the same result, and a testbed yields a result which differs from this majority output. A \textbf{w} result is indicative of a \emph{miscompilation}, a particularly hard to detect class of bug in which the compiler silently emits wrong code. CSmith is designed specifically to target this class of bug.
 
-
 % Only 2.3\% of CLSmith programs with anomalous outputs are insensitive to optimization level.
 
 %
@@ -111,26 +110,36 @@ A \emph{wrong-output} (\textbf{w}) occurs if, for a given test case, the majorit
 % \subsection{Design Trade-Offs}\label{subsec:discussions}
 % Discussions?
 
-\cc{TODO: compress and merge into heuristics discussion above:}
 
 % \paragraph{Design Trade-Offs}
-Our sequence-to-sequence approach to program generation greatly simplifies the implementation --- targeting a new language requires only a corpus of example programs and a test harness for generated codes. The generative model itself contains no language-specific code, and is implemented in less than 200 lines of Python --- a small fraction of that of prior approaches. The trade-off of this makes significantly reduces the cost of development, but we provide no guarantees on generated program correctness. \cc{not well formed, not well typed, and not free from undefined behavior}
+%Our sequence-to-sequence approach to program generation greatly simplifies the implementation --- targeting a new language requires only a corpus of example programs and a test harness for generated codes. The generative model itself contains no language-specific code, and is implemented in less than 200 lines of Python --- a small fraction of that of prior approaches. The trade-off of this makes significantly reduces the cost of development, but we provide no guarantees on generated program correctness. \cc{not well formed, not well typed, and not free from undefined behavior}
 
-\paragraph{Undefined Behaviors} % aka. unambiguous observable behaviour
-Differential testing on the output of a generated program requires that the program does not rely on undefined behavior. OpenCL doesn't have the rich tooling of C --- no CompCert and UBSan, there is much work to be done. GPUverify~\cite{Betts2012} and Oclgrind can catch some errors such as data races and out-of-bounds error checks. Compiler warnings are useful for obvious missteps (e.g. comparison between pointer and integer), but our approach does not rule out manual inspection. DeepSmith programs are easily interpretable --- they are generally short programs built on common language constructs, so this process is not as bad as it could be. We have not yet discovered an false-positive result which was not trivially detectable by automated filtering.
+\subsection{False Positives}\label{subsec:discussions}
+Our sequence-to-sequence approach to program generation greatly simplifies the implementation --- targeting a new language requires only a corpus of example programs and a test harness for generated codes. The generative model itself contains no language-specific code, and is implemented in less than 200 lines of Python --- a small fraction of that of prior approaches. The single downside is that we do not have fine-grained control over code generation, so we cannot build the code in a way that excludes potential sources of false positives, like CLSmith does. Instead, we have to exclude false positives after we identify potential bugs.
 
-\paragraph{OpenCL Versions and Extensions} OpenCL is a fast evolving language, with six standard revisions in eight years. Vendor support for standard versions is inconsistent, as is the support for optional language extensions. Since we do not version the GitHub corpus on which we built the DeepSmith models, this has the potential to lead to false-positive results for programs which depend upon features which are not supported by a testbed. For example, not all testbeds support the optional \texttt{cl\_khr\_fp64} extension which provides support for double-precision floating point. We found that such results were trivially detectable through compiler error messages, and used to prevent false-positives for anomalous build failures.
+Many of the false positives are caused by undefined behavior. Some of them, such as data races and out-of-bounds accesses, can be caught with GPUverify~\cite{Betts2012} and Oclgrind, while some compiler warnings provide strong indication of such behavior (e.g. comparison between pointer and integer). For the rest, our approach does not rule out manual inspection. DeepSmith programs are short and easily interpretable, so manual inspection is feasible.
 
-\paragraph{Floating Points} The OpenCL specifications permit acceptable error bounds (ULP) for floating point operations and builtin functions. Some operations like addition, and multiplication are precise; divide permits a small error, and builtins vary widely. Thus two implementation may give different answers that both fit within the allowed ranges (and because errors propagate through operations it's hard to even describe the ULP on the final output). For this reason, CSmith, and by extension, CLSmith, do not support floating point operations. We believe this restriction to be artificially limiting, since floating point computations are dominant in the common uses of OpenCL --- %
+% Vendor support for OpenCL standard versions is inconsistent, as is the support for optional language extensions. Since we do not version the GitHub corpus on which we built the DeepSmith models, we might generate code which uses features not supported by a testbed. Such cases were trivially detectable through compiler error messages which we used to prevent false-positives for anomalous build failures.
+
+Floating point operations in OpenCL can be imprecise, so the same correct code can produce significantly different output on different testbeds. For this reason, CSmith and CLSmith do not support floating point operations. This restriction is artificially limiting, since floating point computations are very common in OpenCL. DeepSmith allows floating point operations but since it cannot apply differential testing on the outputs, it can detect all results except for the \textbf{w} result.
+
+The hardest false-positive to prevent was division by zero and related mathematical functions which require non-zero values. In all cases we discovered these can be detected by simply changing the input values and checking to see if the output remains anomalous.
+
+%\paragraph{Undefined Behaviors} % aka. unambiguous observable behaviour
+%Differential testing is valid only for programs that do not rely on undefined behavior. Detecting such cases is difficult, especially since OpenCL does not have the rich toolset of C, for example CompCert or UBSan. Some errors such as data races and out-of-bounds accesses can be caught with GPUverify~\cite{Betts2012} and Oclgrind, while compiler warnings may indicate undefined behavior (e.g. comparison between pointer and integer). For the rest, our approach does not rule out manual inspection. DeepSmith programs are short and easily interpretable, so manual inspection is feasible. Still, we have not yet discovered a false-positive result which was not trivially detectable by automated filtering.
+
+%\paragraph{OpenCL Versions and Extensions} OpenCL is a fast evolving language, with six standard revisions in eight years. Vendor support for standard versions is inconsistent, as is the support for optional language extensions. Since we do not version the GitHub corpus on which we built the DeepSmith models, this has the potential to lead to false-positive results for programs which depend upon features which are not supported by a testbed. For example, not all testbeds support the optional \texttt{cl\_khr\_fp64} extension which provides support for double-precision floating point. We found that such results were trivially detectable through compiler error messages, and used to prevent false-positives for anomalous build failures.
+
+%\paragraph{Floating Points} Floating point operations in OpenCL can be imprecise within bounds. Since errors propagate, the same correct code can produce significantly different output on different testbeds. For this reason, CSmith and CLSmith do not support floating point operations. This restriction is artificially limiting, since floating point computations are dominant in the common uses of OpenCL. Instead, we generate, compile, and execute floating point kernels, we just do not subject their outputs to differential testing so we cannot detect a \textbf{w} result. 
 % $ ls | xargs grep -E -l '(float|double)' -- | wc -l  # 2245
 % 48\% of GitHub kernels use floating points.
-We exclude generated kernels containing floating points form difftesting. Given knowledge about hardware imprecision, it would be possible to compute an acceptable error threshold for floating point results based on dynamic profiling.
 
 
-\paragraph{Divide-by zero} \cc{TODO} The hardest false-positive to prevent was division by zero and related mathematical functions which require non-zero values. In all cases we discovered these can be detected by simply changing the input values and checking to see if the output remains anomalous.
+
+% \paragraph{Divide-by zero} \cc{TODO} The hardest false-positive to prevent was division by zero and related mathematical functions which require non-zero values. In all cases we discovered these can be detected by simply changing the input values and checking to see if the output remains anomalous.
 
 % Section 7.4 of OpenCL 1.2 spec.
 
-\paragraph{Small, Human-like Test Cases} Random token / grammar enumeration has previously been used to target parsers and lexers. CSmith creates huge, ``ugly'' programs with the intention of deliberately targeting bugs in IR transformations --- the middle-end.
+\cc{Find a home:} Random token / grammar enumeration has previously been used to target parsers and lexers. CSmith creates huge, ``ugly'' programs with the intention of deliberately targeting bugs in IR transformations --- the middle-end.
 
 One might expect our approach --- generating small test cases in the style of handwritten programs --- is perhaps less likely to find bugs than CSmith, which generates huge, ``ugly'' programs pairing infrequently used language features. DeepSmith rarely generates large OpenCL kernels because humans rarely write them. A code which is more likely to be written by a human is also more likely to be included in the compiler test suites, \cc{hmm what do we do about this}
